infra/kubernetes/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 2000
      targetPort: 2000
  selector:
    app: web
  type: LoadBalancer
